Rename the fork package name and switch the icon.
Changes from here on will be more eink-focused and specific to the
Minimal Phone. The titanpocketkeyboard branch will keep the latest
non-specific changes as of today.

(The existing code branches for the Titan are also untested.)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TitanPocketKeyboard</string>
-    <string name="ime_label">TitanPocketKeyboard</string>
-    <string name="ime_settings">TitanPocketKeyboard Settings</string>
+    <string name="app_name">MinimalPocketKeyboard</string>
+    <string name="ime_label">MinimalPocketKeyboard</string>
+    <string name="ime_settings">MinimalPocketKeyboard Settings</string>
 </resources>
