--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MinimalPocketKeyboard</string>
-    <string name="ime_label">MinimalPocketKeyboard</string>
-    <string name="ime_settings">MinimalPocketKeyboard Settings</string>
+    <string name="app_name">Minimal SymLayer Keyboard</string>
+    <string name="ime_label">Minimal SymLayer Input</string>
+    <string name="ime_settings">Minimal SymLayer Settings</string>
 </resources>
